<!--
  ~ Copyright (c) 2015 Andrew Chow
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Bitcoin Forum</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_unread_posts">Unread Posts</string>
    <string name="title_new_replies">New Replies</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_help">Help</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">My Messages</string>
    <string name="title_members">Members</string>
    <string name="title_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>

    <string name="coming_soon">Coming Soon</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Update frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_watchlist">Watchlist</string>
    <string name="pref_title_personal_Messages">Personal Messages</string>
    <string name="pref_title_unreadposts">Unread Posts</string>
    <string name="pref_title_unreadreplies">Unread Replies</string>

    <string name="title_activity_about">About</string>
    <string name="about">This is the unofficial android app for the official Bitcoin Forum, Bitcointalk.org.\n\nThis app is open source. The source can be browsed at https://github.com/achow101/BitcointalkForum.\nPlease help contribute to the continued development of this app. You can submit code and any bugs that you find. You can also donate some Bitcoin to 1WCMh2uka2G5xyL9ojebWh1NCKCGThgu8.\n\nThis app is licensed under the GNU General Public License. License file here: https://github.com/achow101/BitcointalkForum/blob/master/LICENSE</string>

</resources>
