<!--
  ~ Copyright (c) 2015 Andrew Chow
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications"
        android:defaultValue="true" />

    <SwitchPreference
        android:dependency="notifications_new_message"
        android:key="notifications_watchlist"
        android:title="@string/pref_title_watchlist"
        android:defaultValue="true" />

    <SwitchPreference
        android:dependency="notifications_new_message"
        android:key="notifications_watchlist"
        android:title="@string/pref_title_personal_Messages"
        android:defaultValue="true" />

    <ListPreference
        android:key="notifications_sync_freq"
        android:title="@string/pref_title_sync_frequency"
        android:defaultValue="60"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />

</PreferenceScreen>
